# ATR

./: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SPEC.md  TRANSITION_ROADMAP.md
configs/: default.yaml  inspirafirma_ruleset.json  production.yaml  tachyon.yaml
docs/: AETHERBUS_TACHYON_SPEC_TH.md  CHANGELOG.md  CODE_AUDIT_ACTION_ITEMS_TH.md  NEWCOMER_ONBOARDING_CHECKLIST.md
monitoring/: grafana_dashboard.json  metrics_contract.json  prometheus.yml
proto/: atr_transport.proto
python/: pyproject.toml
python/atr_core/: __init__.py  config.py
python/atr_core/api/: app.py  quarantine.py
python/atr_core/core/: canonicalization.py  immune.py  rules.py  security.py
python/atr_core/proto/: __init__.py  atr_transport_pb2.py
python/atr_core/tests/: test_api.py  test_app_submit_reject_path.py  test_canonicalization.py  test_config.py  test_immune.py
python/atr_core/transport/: client.py  tachyon.py
reports/: atr_performance_report.md
rust/tachyon-core/: Cargo.toml
rust/tachyon-core/src/: lib.rs  ruleset_rcu.rs
scripts/: benchmark.sh  failure_injection.sh  prove_snapshot_determinism.py  snapshot_verify.sh
sidecar/atb-et/: Cargo.toml  build.rs
sidecar/atb-et/src/: main.rs
specs/: backpressure_model.md  benchmark_contract.yaml  canonicalization.md  envelope_schema.json  failure_model.md  governance_fastpath.md  invariants.md  latency_budget.md  memory_arena_design.md  multi_core_scaling.md  observability_contract.md  protocols.md  rdma_transport_design.md  ruleset_update_rcu.md  subject_taxonomy.md  tachyon_packet.md
(+10 files in other folders)
