[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atr-core"
version = "0.1.0"
description = "ATR Core Server skeleton"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pyyaml>=6.0",
  "jsonschema>=4.20.0",
  "pynacl>=1.5.0",
  "grpcio>=1.62.0",
  "blake3>=0.4.1",
]


[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
