[package]
name = "tachyon-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "tachyon_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
arc-swap = "1.7"
once_cell = "1.19"
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
