[package]
name = "atb-et"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
async-nats = "0.35"
futures-util = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11"
